@@ -26,6 +26,7 @@ import cascading.operation.ConcreteCall;
 import cascading.tuple.Fields;
 import cascading.tuple.Tuple;
 import cascading.tuple.TupleEntry;
+import cascading.tuple.TupleListCollector;
 
 /**
  *
@@ -36,56 +37,112 @@ public class ExpressionTest extends CascadingTestCase
     {
     }
 
-  public void testSimpleExpression()
+  public void testExpressionFunction()
     {
-    assertEquals( 3, evaluate( "a + b", int.class, getEntry( 1, 2 ) ) );
-    assertEquals( 3, evaluate( "a + b", int.class, getEntry( 1.0, 2.0 ) ) );
-    assertEquals( 3, evaluate( "a + b", int.class, getEntry( "1", 2.0 ) ) );
+    assertEquals( 3, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", int.class ), getEntry( 1, 2 ) ) );
+    assertEquals( 3, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", int.class ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( 3, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", int.class ), getEntry( "1", 2.0 ) ) );
 
     String[] names = new String[]{"a", "b"};
     Class[] types = new Class[]{long.class, int.class};
 
-    assertEquals( 3l, evaluate( "a + b", names, types, getEntry( 1, 2 ) ) );
-    assertEquals( 3l, evaluate( "a + b", names, types, getEntry( 1.0, 2.0 ) ) );
-    assertEquals( 3l, evaluate( "a + b", names, types, getEntry( "1", 2.0 ) ) );
+    assertEquals( 3l, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", names, types ), getEntry( 1, 2 ) ) );
+    assertEquals( 3l, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", names, types ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( 3l, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", names, types ), getEntry( "1", 2.0 ) ) );
 
     types = new Class[]{double.class, int.class};
 
-    assertEquals( 3d, evaluate( "a + b", names, types, getEntry( 1, 2 ) ) );
-    assertEquals( 3d, evaluate( "a + b", names, types, getEntry( 1.0, 2.0 ) ) );
-    assertEquals( 3d, evaluate( "a + b", names, types, getEntry( "1", 2.0 ) ) );
+    assertEquals( 3d, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", names, types ), getEntry( 1, 2 ) ) );
+    assertEquals( 3d, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", names, types ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( 3d, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b", names, types ), getEntry( "1", 2.0 ) ) );
 
-    assertEquals( 3, evaluate( "$0 + $1", int.class, getEntry( 1, 2 ) ) );
-    assertEquals( 3, evaluate( "$0 + $1", int.class, getEntry( 1.0, 2.0 ) ) );
-    assertEquals( 3, evaluate( "$0 + $1", int.class, getEntry( "1", 2.0 ) ) );
+    Fields arguments = new Fields( names ).applyTypes( types );
+
+    assertEquals( 3d, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b" ), getEntry( arguments, 1, 2 ) ) );
+    assertEquals( 3d, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b" ), getEntry( arguments, 1.0, 2.0 ) ) );
+    assertEquals( 3d, evaluate( new ExpressionFunction( new Fields( "result" ), "a + b" ), getEntry( arguments, "1", 2.0 ) ) );
+
+    assertEquals( 3, evaluate( new ExpressionFunction( new Fields( "result" ), "$0 + $1", int.class ), getEntry( 1, 2 ) ) );
+    assertEquals( 3, evaluate( new ExpressionFunction( new Fields( "result" ), "$0 + $1", int.class ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( 3, evaluate( new ExpressionFunction( new Fields( "result" ), "$0 + $1", int.class ), getEntry( "1", 2.0 ) ) );
 
     names = new String[]{"a", "b"};
     types = new Class[]{String.class, int.class};
-    assertEquals( true, evaluate( "(a != null) && (b > 0)", names, types, getEntry( "1", 2.0 ) ) );
+    assertEquals( true, evaluate( new ExpressionFunction( new Fields( "result" ), "(a != null) && (b > 0)", names, types ), getEntry( "1", 2.0 ) ) );
 
     names = new String[]{"$0", "$1"};
     types = new Class[]{String.class, int.class};
-    assertEquals( true, evaluate( "($0 != null) && ($1 > 0)", names, types, getEntry( "1", 2.0 ) ) );
+    assertEquals( true, evaluate( new ExpressionFunction( new Fields( "result" ), "($0 != null) && ($1 > 0)", names, types ), getEntry( "1", 2.0 ) ) );
 
     names = new String[]{"a", "b", "c"};
     types = new Class[]{float.class, String.class, String.class};
-    assertEquals( true, evaluate( "b.equals(\"1\") && (a == 2.0) && c.equals(\"2\")", names, types, getEntry( 2.0, "1", "2" ) ) );
+    assertEquals( true, evaluate( new ExpressionFunction( new Fields( "result" ), "b.equals(\"1\") && (a == 2.0) && c.equals(\"2\")", names, types ), getEntry( 2.0, "1", "2" ) ) );
 
     names = new String[]{"a", "b", "$2"};
     types = new Class[]{float.class, String.class, String.class};
-    assertEquals( true, evaluate( "b.equals(\"1\") && (a == 2.0) && $2.equals(\"2\")", names, types, getEntry( 2.0, "1", "2" ) ) );
+    assertEquals( true, evaluate( new ExpressionFunction( new Fields( "result" ), "b.equals(\"1\") && (a == 2.0) && $2.equals(\"2\")", names, types ), getEntry( 2.0, "1", "2" ) ) );
+    }
+
+  public void testExpressionFilter()
+    {
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", int.class ), getEntry( 1, 2 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", int.class ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", int.class ), getEntry( "1", 2.0 ) ) );
+
+    String[] names = new String[]{"a", "b"};
+    Class[] types = new Class[]{long.class, int.class};
+
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", names, types ), getEntry( 1, 2 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", names, types ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", names, types ), getEntry( "1", 2.0 ) ) );
+
+    types = new Class[]{double.class, int.class};
+
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", names, types ), getEntry( 1, 2 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", names, types ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b", names, types ), getEntry( "1", 2.0 ) ) );
+
+    Fields arguments = new Fields( names ).applyTypes( types );
+
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b" ), getEntry( arguments, 1, 2 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b" ), getEntry( arguments, 1.0, 2.0 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "a < b" ), getEntry( arguments, "1", 2.0 ) ) );
+
+    assertEquals( true, invokeFilter( new ExpressionFilter( "$0 < $1", int.class ), getEntry( 1, 2 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "$0 < $1", int.class ), getEntry( 1.0, 2.0 ) ) );
+    assertEquals( true, invokeFilter( new ExpressionFilter( "$0 < $1", int.class ), getEntry( "1", 2.0 ) ) );
+
+    names = new String[]{"a", "b"};
+    types = new Class[]{String.class, int.class};
+    assertEquals( true, invokeFilter( new ExpressionFilter( "(a != null) && (b > 0)", names, types ), getEntry( "1", 2.0 ) ) );
+
+    names = new String[]{"$0", "$1"};
+    types = new Class[]{String.class, int.class};
+    assertEquals( true, invokeFilter( new ExpressionFilter( "($0 != null) && ($1 > 0)", names, types ), getEntry( "1", 2.0 ) ) );
+
+    names = new String[]{"a", "b", "c"};
+    types = new Class[]{float.class, String.class, String.class};
+    assertEquals( true, invokeFilter( new ExpressionFilter( "b.equals(\"1\") && (a == 2.0) && c.equals(\"2\")", names, types ), getEntry( 2.0, "1", "2" ) ) );
+
+    names = new String[]{"a", "b", "$2"};
+    types = new Class[]{float.class, String.class, String.class};
+    assertEquals( true, invokeFilter( new ExpressionFilter( "b.equals(\"1\") && (a == 2.0) && $2.equals(\"2\")", names, types ), getEntry( 2.0, "1", "2" ) ) );
     }
 
   public void testNoParamExpression()
     {
+    Fields fields = new Fields( "a", "b" ).applyTypes( String.class, double.class );
     String expression = "(int) (Math.random() * Integer.MAX_VALUE)";
-    Number integer = (Number) evaluate( expression, getEntry( "1", 2.0 ) );
-//    System.out.println( "integer = " + integer );
+    Number integer = (Number) evaluate( new ExpressionFunction( new Fields( "result" ), expression ), getEntry( fields, "1", 2.0 ) );
+    assertNotNull( integer );
+
+    // Fields.NONE as argument selector
+    integer = (Number) evaluate( new ExpressionFunction( new Fields( "result" ), expression ), TupleEntry.NULL );
     assertNotNull( integer );
 
     try
       {
-      evaluate( "(int) (Math.random() * Integer.MAX_VALUE) + parameter", getEntry( "1", 2.0 ) );
+      evaluate( new ExpressionFunction( new Fields( "result" ), "(int) (Math.random() * Integer.MAX_VALUE) + parameter" ), getEntry( fields, "1", 2.0 ) );
       fail( "should throw exception" );
       }
     catch( Exception exception )
@@ -94,49 +151,18 @@ public class ExpressionTest extends CascadingTestCase
       }
     }
 
-  private Object evaluate( String expression, TupleEntry tupleEntry )
+  private Object evaluate( ExpressionFunction function, TupleEntry tupleEntry )
     {
-    ExpressionFunction function = getFunction( expression );
+    TupleListCollector tuples = invokeFunction( function, tupleEntry, function.getFieldDeclaration() );
 
-    ConcreteCall<ExpressionOperation.Context> call = new ConcreteCall<ExpressionOperation.Context>( tupleEntry.getFields(), function.getFieldDeclaration() );
-    function.prepare( FlowProcess.NULL, call );
-
-    return function.evaluate( call.getContext(), tupleEntry );
+    return tuples.entryIterator().next().getObject( 0 );
     }
 
-  private Object evaluate( String expression, Class type, TupleEntry tupleEntry )
+  private TupleEntry getEntry( Fields fields, Comparable lhs, Comparable rhs )
     {
-    ExpressionFunction function = getFunction( expression, type );
+    Tuple parameters = new Tuple( lhs, rhs );
 
-    ConcreteCall<ExpressionOperation.Context> call = new ConcreteCall<ExpressionOperation.Context>( tupleEntry.getFields(), function.getFieldDeclaration() );
-    function.prepare( FlowProcess.NULL, call );
-
-    return function.evaluate( call.getContext(), tupleEntry );
-    }
-
-  private Object evaluate( String expression, String[] names, Class[] types, TupleEntry tupleEntry )
-    {
-    ExpressionFunction function = getFunction( expression, names, types );
-
-    ConcreteCall<ExpressionOperation.Context> call = new ConcreteCall<ExpressionOperation.Context>( tupleEntry.getFields(), function.getFieldDeclaration() );
-    function.prepare( FlowProcess.NULL, call );
-
-    return function.evaluate( call.getContext(), tupleEntry );
-    }
-
-  private ExpressionFunction getFunction( String expression )
-    {
-    return new ExpressionFunction( new Fields( "result" ), expression );
-    }
-
-  private ExpressionFunction getFunction( String expression, Class type )
-    {
-    return new ExpressionFunction( new Fields( "result" ), expression, type );
-    }
-
-  private ExpressionFunction getFunction( String expression, String[] names, Class[] classes )
-    {
-    return new ExpressionFunction( new Fields( "result" ), expression, names, classes );
+    return new TupleEntry( fields, parameters );
     }
 
   private TupleEntry getEntry( Comparable lhs, Comparable rhs )
